# Bilateral-GIG

./: .gitignore  LICENSE  README.md  bgigestimator.py  esscherestimator.py  filter.py  install.bash  main.py  main2.py  pricer.py  pyproject.toml  requirements.txt  test.ipynb
BIG/: BIG.py  distribution.py
bgig_distribution/: bgigestimator.py  density.py
data/: SP500_2021_2024.csv
src/: bgigestimator.py  density.py
